feat: add DevicePluginConfig to ClusterConfig
