# server/internal/server/cluster_config.go
@@ -10,8 +10,15 @@ import (
 	"github.com/llmariner/rbac-manager/pkg/auth"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
+	"google.golang.org/protobuf/proto"
 	"google.golang.org/protobuf/types/known/emptypb"
 	"gorm.io/gorm"
+)
+
+const (
+	// TODO(kenji): Make these configurable.
+	defaultDevicePluginConfigMapName      = "device-plugin-config"
+	defaultDevicePluginConfigMapNamespace = "nvidia"
 )
 
 // CreateClusterConfig creates a cluster config.
@@ -28,8 +35,26 @@ func (s *S) CreateClusterConfig(
 		return nil, err
 	}
 
+	if err := validateDevicePluginConfig(req.DevicePluginConfig); err != nil {
+		return nil, err
+	}
+
+	configProto := &v1.ClusterConfig{
+		DevicePluginConfig:             req.DevicePluginConfig,
+		DevicePluginConfigmapName:      defaultDevicePluginConfigMapName,
+		DevicePluginConfigmapNamespace: defaultDevicePluginConfigMapNamespace,
+	}
+	msg, err := proto.Marshal(configProto)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "marshal cluster config: %s", err)
+	}
+
+	// TODO(kenji): Create the ConfigMap in the k8s' cluster before persisting it in the database.
+	// TODO(kenji): Revisit. This can be an asynchronous operation.
+
 	config := &store.ClusterConfig{
 		ClusterID: req.ClusterId,
+		Message:   msg,
 	}
 	if err := s.store.CreateClusterConfig(config); err != nil {
 		if gerrors.IsUniqueConstraintViolation(err) {
@@ -38,7 +63,7 @@ func (s *S) CreateClusterConfig(
 		return nil, status.Errorf(codes.Internal, "create cluster config: %s", err)
 	}
 
-	return toConfigProto(config), nil
+	return configProto, nil
 }
 
 // GetClusterConfig retrieves the cluster config.
@@ -63,7 +88,12 @@ func (s *S) GetClusterConfig(
 		return nil, status.Errorf(codes.Internal, "get cluster config: %s", err)
 	}
 
-	return toConfigProto(config), nil
+	var configProto v1.ClusterConfig
+	if err := proto.Unmarshal(config.Message, &configProto); err != nil {
+		return nil, status.Errorf(codes.Internal, "unmarshal cluster config: %s", err)
+	}
+
+	return &configProto, nil
 }
 
 // UpdateClusterConfig updates the cluster config.
@@ -71,6 +101,21 @@ func (s *S) UpdateClusterConfig(
 	ctx context.Context,
 	req *v1.UpdateClusterConfigRequest,
 ) (*v1.ClusterConfig, error) {
+	userInfo, ok := auth.ExtractUserInfoFromContext(ctx)
+	if !ok {
+		return nil, status.Errorf(codes.Unauthenticated, "failed to authorize")
+	}
+
+	if err := s.validateClusterID(req.ClusterId, userInfo); err != nil {
+		return nil, err
+	}
+
+	if err := validateDevicePluginConfig(req.DevicePluginConfig); err != nil {
+		return nil, err
+	}
+
+	// TODO(kenji): Implement.
+
 	return nil, status.Errorf(codes.Unimplemented, "update cluster config is not implemented yet")
 }
 
@@ -87,6 +132,10 @@ func (s *S) DeleteClusterConfig(
 	if err := s.validateClusterID(req.ClusterId, userInfo); err != nil {
 		return nil, err
 	}
+
+	// TODO(kenji): Delete the ConfigMap from the k8s cluster. Ignore the error if the ConfigMap does not exist.
+
+	// TODO(kenji): Revisit. This can be an asynchronous operation.
 
 	if err := s.store.DeleteClusterConfig(req.ClusterId); err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
@@ -114,8 +163,18 @@ func (s *S) validateClusterID(clusterID string, userInfo *auth.UserInfo) error {
 	return nil
 }
 
-func toConfigProto(config *store.ClusterConfig) *v1.ClusterConfig {
-	return &v1.ClusterConfig{
-		// TODO(kenji): Add fields.
+func validateDevicePluginConfig(dpconfig *v1.DevicePluginConfig) error {
+	if dpconfig == nil {
+		return status.Errorf(codes.InvalidArgument, "devicePluginConfig is required")
 	}
+	ts := dpconfig.TimeSlicing
+	if ts == nil {
+		return status.Errorf(codes.InvalidArgument, "timeSlicing is required")
+	}
+
+	if ts.Gpus <= 0 {
+		return status.Errorf(codes.InvalidArgument, "timeSlicing.gpus must be greater than 0")
+	}
+
+	return nil
 }
